--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Rizum（リズム） - あなたのペースで、習慣化。シンプルで使いやすい習慣管理アプリ。リマインダー、予定管理、ポモドーロタイマーで、あなたの集中力と習慣形成をサポートします。">
+    <meta name="description"
+        content="Rizum（リズム） - あなたのペースで、習慣化。シンプルで使いやすい習慣管理アプリ。リマインダー、予定管理、ポモドーロタイマーで、あなたの集中力と習慣形成をサポートします。">
     <meta name="keywords" content="Rizum, リズム, 習慣, リマインダー, ポモドーロ, 集中力, タスク管理, スケジュール, 習慣化">
     <title>Rizum（リズム） - あなたのペースで、習慣化</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
@@ -402,6 +404,7 @@
                 opacity: 0;
                 transform: translateY(30px);
             }
+
             to {
                 opacity: 1;
                 transform: translateY(0);
@@ -413,16 +416,19 @@
         }
     </style>
 </head>
+
 <body>
     <!-- Hero Section -->
     <section class="hero">
         <div class="hero-content">
             <h1>Rizum<br><span style="font-size: 24px; font-weight: 400; opacity: 0.9;">リズム</span></h1>
             <p>あなたのペースで、習慣化。集中力をサポートし、習慣形成を助けるシンプルで使いやすいアプリです。リマインダー、予定管理、ポモドーロタイマーで、あなたの毎日をもっと快適に。</p>
+            <!-- 
             <div class="cta-buttons">
                 <a href="#" class="btn btn-primary"><i class="fab fa-apple"></i> App Storeからダウンロード</a>
                 <a href="#features" class="btn btn-secondary"><i class="fas fa-star"></i> 機能を見る</a>
             </div>
+            -->
         </div>
     </section>
 
@@ -434,7 +440,8 @@
 
             <div class="features-grid">
                 <div class="feature-card">
-                    <div class="feature-icon" style="background: linear-gradient(135deg, #007AFF 0%, #5856D6 100%); color: white;">
+                    <div class="feature-icon"
+                        style="background: linear-gradient(135deg, #007AFF 0%, #5856D6 100%); color: white;">
                         <i class="fas fa-bell" style="font-size: 32px;"></i>
                     </div>
                     <h3>スマートリマインダー</h3>
@@ -442,7 +449,8 @@
                 </div>
 
                 <div class="feature-card">
-                    <div class="feature-icon" style="background: linear-gradient(135deg, #34C759 0%, #28A745 100%); color: white;">
+                    <div class="feature-icon"
+                        style="background: linear-gradient(135deg, #34C759 0%, #28A745 100%); color: white;">
                         <i class="fas fa-stopwatch" style="font-size: 32px;"></i>
                     </div>
                     <h3>ポモドーロタイマー</h3>
@@ -450,7 +458,8 @@
                 </div>
 
                 <div class="feature-card">
-                    <div class="feature-icon" style="background: linear-gradient(135deg, #FF9500 0%, #FF6B00 100%); color: white;">
+                    <div class="feature-icon"
+                        style="background: linear-gradient(135deg, #FF9500 0%, #FF6B00 100%); color: white;">
                         <i class="fas fa-calendar-alt" style="font-size: 32px;"></i>
                     </div>
                     <h3>予定管理</h3>
@@ -458,7 +467,8 @@
                 </div>
 
                 <div class="feature-card">
-                    <div class="feature-icon" style="background: linear-gradient(135deg, #5856D6 0%, #4527A0 100%); color: white;">
+                    <div class="feature-icon"
+                        style="background: linear-gradient(135deg, #5856D6 0%, #4527A0 100%); color: white;">
                         <i class="fas fa-chart-line" style="font-size: 32px;"></i>
                     </div>
                     <h3>タイムライン表示</h3>
@@ -466,7 +476,8 @@
                 </div>
 
                 <div class="feature-card">
-                    <div class="feature-icon" style="background: linear-gradient(135deg, #00C7BE 0%, #00A896 100%); color: white;">
+                    <div class="feature-icon"
+                        style="background: linear-gradient(135deg, #00C7BE 0%, #00A896 100%); color: white;">
                         <i class="fas fa-tags" style="font-size: 32px;"></i>
                     </div>
                     <h3>カテゴリ管理</h3>
@@ -504,7 +515,7 @@
                 <div class="benefit-item">
                     <div class="benefit-icon"><i class="fas fa-cog" style="color: var(--warning-color);"></i></div>
                     <h4>柔軟な通知設定</h4>
-                    <p>朝の予告、日次レビューなど、あなたに合った通知をカスタマイズ</p>
+                    <p>あなたに合った通知をカスタマイズ</p>
                 </div>
             </div>
         </div>
@@ -520,25 +531,29 @@
 
                 <div class="privacy-features">
                     <div class="privacy-feature">
-                        <div class="privacy-feature-icon"><i class="fas fa-mobile-alt" style="color: var(--primary-color);"></i></div>
+                        <div class="privacy-feature-icon"><i class="fas fa-mobile-alt"
+                                style="color: var(--primary-color);"></i></div>
                         <h4>ローカルストレージ</h4>
                         <p>データは全てデバイス内に保存</p>
                     </div>
 
                     <div class="privacy-feature">
-                        <div class="privacy-feature-icon"><i class="fas fa-times-circle" style="color: var(--warning-color);"></i></div>
+                        <div class="privacy-feature-icon"><i class="fas fa-times-circle"
+                                style="color: var(--warning-color);"></i></div>
                         <h4>外部送信なし</h4>
                         <p>個人情報を外部に送信しません</p>
                     </div>
 
                     <div class="privacy-feature">
-                        <div class="privacy-feature-icon"><i class="fas fa-lock" style="color: var(--success-color);"></i></div>
+                        <div class="privacy-feature-icon"><i class="fas fa-lock"
+                                style="color: var(--success-color);"></i></div>
                         <h4>暗号化対応</h4>
                         <p>OSレベルの暗号化で保護</p>
                     </div>
 
                     <div class="privacy-feature">
-                        <div class="privacy-feature-icon"><i class="fas fa-user-slash" style="color: var(--info-color);"></i></div>
+                        <div class="privacy-feature-icon"><i class="fas fa-user-slash"
+                                style="color: var(--info-color);"></i></div>
                         <h4>アカウント不要</h4>
                         <p>個人情報の登録は一切不要</p>
                     </div>
@@ -555,24 +570,16 @@
 
             <div class="screenshots-slider">
                 <div class="screenshot-item">
-                    <div style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); height: 600px; border-radius: 24px; display: flex; align-items: center; justify-content: center; color: white; font-size: 18px; font-weight: 600;">
-                        ホーム画面<br>（スクリーンショット準備中）
-                    </div>
+                    <img src="img-top.png" alt="ホーム画面">
                 </div>
                 <div class="screenshot-item">
-                    <div style="background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%); height: 600px; border-radius: 24px; display: flex; align-items: center; justify-content: center; color: white; font-size: 18px; font-weight: 600;">
-                        リマインダー画面<br>（スクリーンショット準備中）
-                    </div>
+                    <img src="img-list.png" alt="リマインダー画面">
                 </div>
                 <div class="screenshot-item">
-                    <div style="background: linear-gradient(135deg, #4facfe 0%, #00f2fe 100%); height: 600px; border-radius: 24px; display: flex; align-items: center; justify-content: center; color: white; font-size: 18px; font-weight: 600;">
-                        タイムライン画面<br>（スクリーンショット準備中）
-                    </div>
+                    <img src="img-detail.png" alt="詳細画面">
                 </div>
                 <div class="screenshot-item">
-                    <div style="background: linear-gradient(135deg, #43e97b 0%, #38f9d7 100%); height: 600px; border-radius: 24px; display: flex; align-items: center; justify-content: center; color: white; font-size: 18px; font-weight: 600;">
-                        ポモドーロタイマー<br>（スクリーンショット準備中）
-                    </div>
+                    <img src="img-pomo.png" alt="ポモドーロタイマー">
                 </div>
             </div>
         </div>
@@ -583,9 +590,11 @@
         <div class="container">
             <h2>今すぐ始めよう</h2>
             <p>Rizum（リズム）で、あなたのペースで習慣化。毎日をもっと快適に、もっと充実させましょう。</p>
+            <!-- 
             <div class="cta-buttons">
                 <a href="#" class="btn btn-primary"><i class="fab fa-apple"></i> App Storeからダウンロード</a>
             </div>
+            -->
             <p style="margin-top: 24px; font-size: 14px; opacity: 0.8;">無料でダウンロード・利用できます</p>
         </div>
     </section>
@@ -667,4 +676,5 @@
         });
     </script>
 </body>
+
 </html>
