--- a/index.html
+++ b/index.html
@@ -631,8 +631,8 @@
             <div class="footer-section">
                 <h4>法的情報</h4>
                 <ul>
-                    <li><a href="terms-of-service.html">利用規約</a></li>
-                    <li><a href="privacy-policy.html">プライバシーポリシー</a></li>
+                    <li><a href="https://sikakou54.github.io/rizum-terms/">利用規約</a></li>
+                    <li><a href="https://sikakou54.github.io/rizum-policy/">プライバシーポリシー</a></li>
                 </ul>
             </div>
         </div>
